--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.8.7"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.7",
+    "sanitize-html": "^1.21.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
